# ctfd-mcp

./: pyproject.toml
