[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctfd-mcp"
version = "0.1.1"
description = "MCP server for CTFd that lets regular users browse challenges, manage dynamic instances, and submit flags."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "anyio>=4.4",
    "httpx>=0.28.1",
    "mcp>=1.23.3",
    "python-dotenv>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/umbra2728/ctfd-mcp"
Repository = "https://github.com/umbra2728/ctfd-mcp"
Issues = "https://github.com/umbra2728/ctfd-mcp/issues"

[project.scripts]
ctfd-mcp = "ctfd_mcp.main:main"

[dependency-groups]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
